# FoSpy

./: .gitattributes  .gitignore  404.html  README.md  brainstorm.md  index.html  linting.json  objects.inv  pyproject.toml  requirements.txt  scratch.fos  versions.json  windows_deploy.bat
.github/scripts/: freeze_reqs.py
.github/workflows/: dev-audit.yml  docs-deploy.yml  docs-dev.yml  freeze-example.yml  freeze-reqs.yml  linting.yml  mkdocs-deploy.yml  pypi-release.yml  version-tag.yml
GUI/: ruff_report.json  vulture_report.txt
LLM/: readme.md  vulture_report.txt
LLM/sandbox/: expected.json  expected_prompt_temp.md  outline.ipynb
PyPI/: readme.md
SSMC-CI_2026/: readme.md  start_synthesis.fos
SSMC-CI_2026/Jill/: 0_start.json  1_precursor.json  2_filled.json  3_filled_remainder.json  4_final.fos  eln_map.json  process_json.py  remainder.json
SSMC-CI_2026/Peter/: make_jsons.py  synthesis_clean.json  synthesis_dict_clean.json  synthesis_dict_full.json  synthesis_full.json
SSMC-CI_2026/figures/: make_json.py  synthesis_dict.json
SSMC-CI_2026/json_example/: process_json.py
SciDFM/: readme.md
SciDFM/sandbox/: FoSpy_get_tokens.ipynb  colab_reqs.txt  get_tokens.ipynb  requirements.txt
blocks/: index.html
blocks/blocks/: index.html
blocks/data/: index.html
blocks/embedded/: index.html
blocks/files/: index.html
blocks/materials/: index.html
blocks/metadata/: index.html
blocks/synthesis/: index.html
blocks/template/: index.html
blocks/treatments/: index.html
dev/: ruff_report.json  vulture_report.txt
docs/required_properties/: index.md  index.txt
example/: end_synthesis.fos  end_templates.fos  example.py  extract_and_run.py  readme.md  start_synthesis.fos  start_templates.fos
example/synthesis/: check01.fos  check02.fos  check03.fos  check04.fos  check05.fos  check06.fos  check08.fos  check09.fos  check10.fos  start_synthesis.fos
example/templates/: check01.fos  check06.fos  check07.fos  check09.fos
examples/API_example/: index.html
examples/synthesis/: check01.fos  check02.fos  index.html
examples/templates/: index.html
expected/: index.html
file_download/: windows_new_clone.bat
full/: index.html
full/_debug/: index.html
full/core/: index.html
gui/: vulture_report.txt
internal/: docs_todo.md  index.html
internal/dev_env/: index.html
internal/sandbox/: build_expected.py  exp_tables.json  exp_tables.md  expected.md  expected_cleaning.py  expected_old.json
internal/star_testing/: star_test.py  start_synthesis.json  test.star
material-track/: vulture_report.txt
mkdocs/: mkdocs.yml  mkdocs_requirements.txt  nav.yml  nav_header.yml
mkdocs/build_scripts/: API_example.py  class_template.md  test.py
mkdocs/docs/: index.md
mkdocs/fos_site/: pyproject.toml  readme.md
mkdocs/fos_site/src/fos_site/: __init__.py  __main__.py  _utils.py  build_nav.py  run_example.py
mkdocs/fos_site/src/fos_site/build_nav/: __init__.py  helpers.py
mkdocs/fos_site/src/fos_site/check_tables/: __init__.py  helpers.py
mkdocs/fos_site/src/fos_site/copy_md/: helpers.py
mkdocs/fos_site/src/fos_site/fos_to_md/: __init__.py  helpers.py
mkdocs/fos_site/src/fos_site/internal/: __init__.py  package_installers.py
mkdocs/fos_site/src/fos_site/internal/copy_md/: __init__.py  helpers.py
mkdocs/fos_site/src/fos_site/json_guides/: __init__.py  helpers.py
mkdocs/fos_site/src/fos_site/run_example/: __init__.py  extracted.py  helpers.py
mkdocs/fos_site/src/fos_site/stubs/: block_stubs.py  full_stubs.py
mkdocs/nav/: footer.yml  full.yml  header.yml
mkdocs/overrides/: main.html
mkdocs/scripts/: _full_build.py  block_pages.py  block_stubs.py  build_nav.py  fos_to_md.py  full_stubs.py  run_API_example.py
peak-match/: ruff_report.json  vulture_report.txt
property-JSON/: vulture_report.txt
pytest/: vulture_report.txt
requirements/: DEV-TEST.txt  DEV.in  DEV.txt  PySide.in  PySide.txt  Qt.txt  _base.in  _base.txt  all.in  all.txt  app.in  app.txt  cif2xrd.in  cif2xrd.txt  dans-diff.in  dans-diff.txt  diffraction.in  diffraction.txt  qt-plotting.txt
src/FoSpy/: __init__.py  _debug.py  _errors.py  _utils.py  blocks.py  core.py  parsing.py  synthesis.py
star_testing/: star_test.py  test.star
tests/FoSpy/: test_example.py
tests/example_fos/: alternate_syntax_Ba2-Zn5-As6.fos
tests/scripts/: cif_test.py  constructorTest.py  embedTest.py  furnace_test.py  parseTest.py  rename_test.py  templateTest.py
tests/test_fos/: read_test.fos  start_synthesis.fos  template_test.fos  template_write_test.fos  write_test.fos
v0.0.0/: 404.html  index.html  sitemap.xml
v0.0.0/blocks/: index.html
v0.0.0/expected/: index.html
v0.0.0/full/: index.html
v0.0.0/internal/: index.html
v0.0.7/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.7/blocks/: index.html
v0.0.7/expected/: index.html
v0.0.7/file_download/: empty_fos.fos
v0.0.7/full/: index.html
v0.0.7/internal/: index.html  test.py
v0.0.7/stylesheets/: extra.css  light-plus.css  plastic-dark.css
v0.0.8/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.8/blocks/: index.html
v0.0.8/expected/: index.html
v0.0.8/full/: index.html
v0.0.8/internal/: index.html
v0.0.9/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.9/blocks/: index.html
v0.0.9/expected/: index.html
v0.0.9/full/: index.html
v0.0.9/internal/: index.html
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/blocks/: index.html
v0.1.0/expected/: index.html
v0.1.0/full/: index.html
v0.1.0/internal/: index.html
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/blocks/: index.html
v0.1.1/expected/: index.html
v0.1.1/full/: index.html
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.3/: 404.html  index.html  sitemap.xml
v0.2.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.5/: 404.html  index.html  objects.inv  sitemap.xml
(+1595 files in other folders)
