[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "FoSpy"
authors = [
  { name="Travis Errthum" },
]
description = "A package for opening, editing, and saving Files of Synthesis (*.fos)"
readme = "PyPI/readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pandas",
    "chemformula",
    "cif2xrd >= 1.0.3",
    "pint"
]
dynamic = [
    "version"
]

[project.optional-dependencies]
DEV = ["questionary"]
all = ["questionary"]

[project.urls]
Homepage = "https://github.com/errthumt/FoSpy"
Issues = "https://github.com/errthumt/FoSpy/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "internal/*",
    "mkdocs/*",
    "SSMC-CI_2026/*"
]

[tool.hatch.build.targets.wheel]
packages=["src/FoSpy"]

[tool.hatch.version]
source="vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build]
include = [
    "src/FoSpy/config/*.json"
]
exclude = [
    "src/FoSpy/config/user.json"
]

[project.scripts]
fos-dev-test = "FoSpy._dev.test_cli:main"


