[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "FoSpy"
authors = [
  { name="Travis Errthum" },
]
description = "A package for opening, editing, and saving Files of Synthesis (*.fos)"
readme = "PyPI/readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pandas",
    "chemformula",
    "pint"
]
dynamic = [
    "version"
]

[project.optional-dependencies]
diffraction = [
    "scipy",
    "numpy",
    "matplotlib",
    "pymatgen",
    "pybaselines"
]
dans-diff = [
    "FoSpy[diffraction]",
    "Dans-Diffraction"
]
cif2xrd = [
    "FoSpy[diffraction]",
    "cif2xrd >= 1.0.3"
]
Qt = [
    "pyqtgraph",
]
PySide = [
    "FoSpy[Qt]",
    "PySide6"
]
all = ["FoSpy[cif2xrd, PySide]"]
DEV-TEST = ["questionary"]
DEV = ["questionary", "FoSpy[all]"]

[project.urls]
Homepage = "https://github.com/errthumt/FoSpy"
Issues = "https://github.com/errthumt/FoSpy/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "internal/*",
    "mkdocs/*",
    "SSMC-CI_2026/*"
]

[tool.hatch.build.targets.wheel]
packages=["src/FoSpy"]

[tool.hatch.version]
source="vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build]
include = [
    "src/FoSpy/config/*.json"
]
exclude = [
    "src/FoSpy/config/user.json"
]

[tool.vulture]
paths = ["src"]
exclude = ["mkdocs/*", "internal/*"]
ignore_names = [
    "__*__"
]

[project.scripts]
fos-dev-test = "FoSpy._dev.testing.cli:main"


