[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fos_site"
version = "0.0.1"
authors = [
  { name="Travis Errthum" },
]
description = "Internal build modules for building the FoSpy mkdocs site."
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "FoSpy @ {root:uri}/../..",
    "markdown-it-py[linkify]",
    "mdformat",
    "PyYAML",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-copy-markdown",
    "mkdocs-pygments",
    "pymdown-extensions",
    "black",
    "mike",
]

[project.scripts]
fos-site-build = "fos_site:build_full_site_cli"

[tool.hatch.metadata]
allow-direct-references = true
